--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.10.1",
+    "body-parser": "^1.10.2",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "express": "~4.11.0",
     "jade": "~1.9.0",
+    "mongoose": "^3.8.25",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0"
   }
