--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.9.0",
     "mongoose": "^3.8.25",
     "morgan": "~1.5.1",
+    "request": "^2.53.0",
     "serve-favicon": "~2.2.0"
   }
 }
